# video-editing-pro

./: LICENSE  README.md  ThirdPartyNotices.txt  pyproject.toml  requirements.txt
.github/workflows/: release.yml
resources/: styles.qss
samples/: README.md
src/: app.py
src/core/: compositor.py  decoder.py  project_model.py  timeline_engine.py
src/core/audio/: ducking.py  mixer.py  waveform.py
src/core/effects/: blur.py  mosaic.py
src/io/: autosave.py  exporter.py  importers.py
src/ui/: dialogs.py  inspector.py  main_window.py  media_bin.py  timeline_view.py  transport.py  viewer.py
tests/: test_audio_ducking.py  test_effects_mosaic.py  test_export_equivalence.py  test_project_model.py
tools/: build.ps1  installer.iss  postinstall.ps1  release.spec
